[gd_scene load_steps=3 format=3 uid="uid://b1wskcnwrxs25"]

[ext_resource type="Script" path="res://src/scenes/menu/scripts/main.gd" id="1_hc677"]
[ext_resource type="Script" path="res://src/scenes/menu/scripts/ConnectMenu.gd" id="3_cpjdu"]

[node name="root" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -5.0
offset_right = 8.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hc677")

[node name="Level" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.0
offset_top = -33.0
offset_right = 28.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="MainMenu" type="Node2D" parent="Level"]

[node name="VBoxContainer" type="VBoxContainer" parent="Level/MainMenu"]
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -42.0
offset_right = 42.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="HostButton" type="Button" parent="Level/MainMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "HOST"

[node name="ConnectButton" type="Button" parent="Level/MainMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "CONNECT"

[node name="ExitButton" type="Button" parent="Level/MainMenu/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 26
text = "EXIT"

[node name="ConnectMenu" type="Node2D" parent="Level"]
visible = false
script = ExtResource("3_cpjdu")

[node name="BackToMainMenuFromConnectButton" type="Button" parent="Level/ConnectMenu"]
offset_left = -502.0
offset_top = 288.0
offset_right = -446.0
offset_bottom = 319.0
text = "Back"

[node name="ServerIPLabel" type="Label" parent="Level/ConnectMenu"]
offset_left = -94.0
offset_top = 20.0
offset_right = -22.0
offset_bottom = 46.0
text = "ServerIP:"

[node name="ConnectGameButton" type="Button" parent="Level/ConnectMenu"]
offset_left = -57.0
offset_top = 103.0
offset_right = 117.0
offset_bottom = 134.0
text = "CONNECT"

[node name="ServerIPEdit" type="TextEdit" parent="Level/ConnectMenu"]
offset_left = -142.0
offset_top = 49.0
offset_right = 30.0
offset_bottom = 84.0
text = "localhost"

[node name="ServerPortEdit" type="TextEdit" parent="Level/ConnectMenu"]
offset_left = 43.0
offset_top = 48.0
offset_right = 180.0
offset_bottom = 84.0
text = "4433"
placeholder_text = "PORT"

[node name="ServerPortLabel" type="Label" parent="Level/ConnectMenu"]
offset_left = 47.0
offset_top = 15.0
offset_right = 119.0
offset_bottom = 41.0
text = "Port:"

[node name="ConnectionStatus" type="Label" parent="Level/ConnectMenu"]
offset_left = -78.0
offset_top = -124.0
offset_right = 120.0
offset_bottom = -83.0

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://src/scenes/level/BattleLevel.tscn", "res://src/scenes/menu/HostLobbyMenu.tscn")
spawn_path = NodePath("../Level")
spawn_limit = 1

[connection signal="pressed" from="Level/MainMenu/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="Level/MainMenu/VBoxContainer/ConnectButton" to="." method="_on_connect_button_pressed"]
[connection signal="pressed" from="Level/MainMenu/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="Level/ConnectMenu/BackToMainMenuFromConnectButton" to="." method="_on_back_to_main_menu_from_connect_button_pressed"]
[connection signal="pressed" from="Level/ConnectMenu/ConnectGameButton" to="Level/ConnectMenu" method="_on_connect_game_button_pressed"]
